<resources>
    <string name="app_name">Mini Code</string>
    <string name="version">1.0</string>
    <string name="launch_menu">Launch Menu</string>
    <string name="line_info">Line Info</string>
    <string name="file_size">File Size</string>
    <string name="open_file">Open File</string>
    <string name="copy_code">Copy Code</string>
    <string name="full_screen">Full Screen</string>
    <string name="edit_code">Edit Code</string>
    <string name="search_code">Search in Code</string>
    <string name="close_menu">Close Menu</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="upgrade">Upgrade</string>
</resources>